<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools">
	<!-- xmlns:app="http://schemas.android.com/apk/res-auto" -->
	<item android:id="@+id/menu_key"
		android:orderInCategory="100"
		android:showAsAction="never"
		android:icon="@drawable/key"
		android:title="@string/menu_key">
<!--		android:icon="@drawable/ic_menu_login" -->
	<!-- app:showAsAction="never" -->
		<menu>
			<item android:id="@+id/menu_key_clipboard"
				android:orderInCategory="101"
				android:icon="@drawable/content_copy"
				android:title="@string/menu_key_clipboard" />
<!--			<item android:id="@+id/menu_key_qr"
				android:orderInCategory="102"
				android:title="@string/menu_key_qr" /> -->
			<item android:id="@+id/menu_key_share"
				android:orderInCategory="103"
				android:icon="@drawable/share"
				android:title="@string/menu_key_share" />
			<!-- android:icon="@android:drawable/ic_menu_share_material" -->
		</menu>
	</item>
	<item android:id="@+id/menu_show_log"
		android:orderInCategory="120"
		android:icon="@drawable/notes"
		android:title="@string/menu_show_log" />
	<item android:id="@+id/menu_flush_db"
		android:orderInCategory="120"
		android:visible="false"
		android:title="flush db" />
	<item android:id="@+id/menu_load_dummy"
		android:orderInCategory="120"
		android:visible="false"
		android:title="init w/ dummy data" />
	<item android:id="@+id/menu_scan"
		android:orderInCategory="90"
		android:showAsAction="always"
		android:icon="@drawable/sensors"
		android:title="@string/menu_scan_off" />
</menu>

